# wreck

./: .gitignore  .gitmodules  Cargo.toml  README.md
benches/: collisions.rs  sdf.rs  transforms.rs
src/: approx.rs  capsule.rs  cuboid.rs  cylinder.rs  lib.rs  point.rs  quote.rs  serde_arrays.rs  soa.rs  sphere.rs  util.rs
src/convex_polytope/: array.rs  heap.rs  mod.rs  refer.rs
src/line/: line.rs  mod.rs  ray.rs  segment.rs
src/plane/: array_convex.rs  convex.rs  infinite.rs  mod.rs  ref_convex.rs
src/pointcloud/: capt.rs  mod.rs  no_pcl.rs
src/sdf/: epa.rs  gjk.rs  mod.rs  support.rs
tests/: capsule.rs  collider_vs_collider.rs  convex_polytope.rs  cuboid.rs  cylinder.rs  line.rs  plane_convex.rs  plane_infinite.rs  point.rs  pointcloud.rs  sdf.rs  sphere.rs  traits.rs
