[package]
name = "wreck"
version = "0.2.3"
edition = "2024"
license = "Apache-2.0"
authors = ["Bowan Foryt <bowan@valstad.com>"]
description = "Library for collision detection of 3d shapes"
repository = "https://github.com/valstad-shipworks/wreck"

[features]
default = ["std"]
std = ["glam/std", "wide/std", "aligned-vec/std", "serde?/std"]
libm = ["dep:libm", "glam/libm"]
debug-wreck-assert = []
wreck-assert = []
approx = ["dep:approx", "glam/approx"]
serde = ["dep:serde", "glam/serde"]
quote = ["dep:quote", "dep:proc-macro2"]

[dependencies]
glam = { version = "0.32.1", default-features = false }
approx = { version = "0.5", optional = true }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
quote = { version = "1", optional = true }
proc-macro2 = { version = "1", optional = true }
wide = { version = "1.2.0", default-features = false }
libm = { version = "0.2", optional = true }
inherent = "1.0.13"
aligned-vec = { version = "0.6.4", default-features = false }
static_assertions = "1.1.0"
cfg-if = "1"

[dev-dependencies]
criterion = "0.8.2"
rand = "0.9"

[[bench]]
name = "collisions"
harness = false

[[bench]]
name = "transforms"
harness = false
